[package]
name = "vmspace"
version = "0.1.0"
edition = "2021"

[dependencies]
page_table = { git = "https://github.com/os-module/page-table.git", package = "page-table" }
memory_addr = { git ="https://github.com/os-module/memory_addr" }
pod = { git = "https://github.com/asterinas/pod", rev = "d7dba56" }